# Algorithms_and_data_structures

3sem/Course_work_calculator_(infix_to_postfix)/: CMakeLists.txt
3sem/Lab1_List/: CMakeLists.txt
4sem/Lab1_Associative_array_(map)/: CMakeLists.txt  main.cpp
4sem/Lab1_Associative_array_(map)/Google_tests/: UnitTests.cpp
4sem/Lab1_Associative_array_(map)/headers/AssociativeArray/: AssociativeArray.h
4sem/Lab1_Associative_array_(map)/headers/DataPair/: DataPair.h
4sem/Lab1_Associative_array_(map)/headers/List/: List.h
4sem/Lab1_Associative_array_(map)/headers/Queue/: Queue.h
4sem/Lab1_Associative_array_(map)/headers/RedBlackTree/: ElemOfRedBlackTree.h  RedBlackTree.h
4sem/Lab1_Associative_array_(map)/headers/associativeArray/: associativeArray.h
4sem/Lab1_Associative_array_(map)/headers/dataPair/: dataPair.h
4sem/Lab1_Associative_array_(map)/headers/iterator/: Iterator.h  RedBlackTreeBreadthFirstTraverseIterator.h  iterator.h
4sem/Lab1_Associative_array_(map)/headers/iteretor/: RedBlackTreeBreadthFirstTraverseIterator.h  iterator.h
4sem/Lab1_Associative_array_(map)/headers/redBlackTree/: elemOfRedBlackTree.h  redBlackTree.h
4sem/Lab1_Associative_array_(map)/src/AssociativeArray/: AssociativeArray.cpp
4sem/Lab1_Associative_array_(map)/src/List/: List.cpp
4sem/Lab1_Associative_array_(map)/src/Queue/: Queue.cpp
4sem/Lab1_Associative_array_(map)/src/RedBlackTree/: ElemOfRedBlackTree.cpp  RedBlackTree.cpp
4sem/Lab1_Associative_array_(map)/src/associativeArray/: associativeArray.cpp
4sem/Lab1_Associative_array_(map)/src/iterator/: RedBlackTreeBreadthFirstTraverseIterator.cpp
4sem/Lab1_Associative_array_(map)/src/redBlackTree/: elemOfRedBlackTree.cpp  redBlackTree.cpp
4sem/Lab2_Huffmon_coding/: CMakeLists.txt  main.cpp
4sem/Lab2_Huffmon_coding/Google_tests/: UnitTests.cpp
4sem/Lab2_Huffmon_coding/headers/AssociativeArray/: AssociativeArray.h
4sem/Lab2_Huffmon_coding/headers/DataPair/: DataPair.h
4sem/Lab2_Huffmon_coding/headers/HuffmanCode/: HuffmanCode.h  HuffmanTree.h
4sem/Lab2_Huffmon_coding/headers/Iterator/: Iterator.h  RedBlackTreeBreadthFirstTraverseIterator.h
4sem/Lab2_Huffmon_coding/headers/List/: List.h
4sem/Lab2_Huffmon_coding/headers/Queue/: Queue.h
4sem/Lab2_Huffmon_coding/headers/RedBlackTree/: ElemOfRedBlackTree.h  RedBlackTree.h
4sem/Lab2_Huffmon_coding/headers/Stack/: Stack.h
4sem/Lab2_Huffmon_coding/src/AssociativeArray/: AssociativeArray.cpp
4sem/Lab2_Huffmon_coding/src/HuffmanCode/: HuffmanCode.cpp  HuffmanTree.cpp
4sem/Lab2_Huffmon_coding/src/Iterator/: RedBlackTreeBreadthFirstTraverseIterator.cpp
4sem/Lab2_Huffmon_coding/src/List/: List.cpp
4sem/Lab2_Huffmon_coding/src/Queue/: Queue.cpp
4sem/Lab2_Huffmon_coding/src/RedBlackTree/: ElemOfRedBlackTree.cpp  RedBlackTree.cpp
4sem/Lab2_Huffmon_coding/src/Stack/: Stack.cpp
4sem/Lab3_Floyd_Warshall/: CMakeLists.txt  main.cpp
4sem/Lab3_Floyd_Warshall/Google_tests/: CMakeLists.txt  UnitTests.cpp  flights.txt
4sem/Lab3_Floyd_Warshall/headers/Exceptions/: Exceptions.h
4sem/Lab3_Floyd_Warshall/headers/Flights/: Flight.h  FlightsGraph.h
4sem/Lab3_Floyd_Warshall/headers/List/: List.h
4sem/Lab3_Floyd_Warshall/src/Flights/: FlightsGraph.cpp
4sem/Lab3_Floyd_Warshall/src/List/: List.cpp
(+20 files in other folders)
